# jmsd_tpc_freetype

./: .gitmodules  CMakeLists.txt  README.md
_tpc_cmake_settings/: tpc-freetype-lib-set-compiler-settings.cmake
_tpc_cmake_settings/compiler-settings/: tpc-freetype-lib-set-linux-compiler-settings.cmake  tpc-freetype-lib-set-windows-compiler-settings.cmake
tpc_freetype/: CMakeLists.txt
